--- a/index.html
+++ b/index.html
@@ -1,83 +1,158 @@
 <!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-    integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <title>Dolce Parma</title>
-</head>
-
-<body>
-  <header>
-    <nav class="navbar navbar-dark navbar-expand-lg d-flex justify-content-between">
-      <div class="col-md-4">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-start" id="navbarNav">
-          <ul class="navbar-nav fs-5 text-white">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Sobre mi</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <div class="d-flex justify-content-around align-items-center">
+        <div class="col-3 justify-content-center">
+          <img src="imagenes/image1.png" alt="logo" />
+        </div>
+        <div class="col-6 d-flex flex-column align-items-end">
+          <div>
+            <a class="btn btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+            <a class="btn btn-floating m-1" href="#!" role="button"
+              ><i class="fab fa-instagram"></i
+            ></a>
+          </div>
+          <ul id="carritoList" class="m-0 p-0">
+            <li class="nav-item dropdown fs-1">
+              <a
+                class="nav-link"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+                ><i class="fa-solid fa-cart-shopping fs-2 text-dark"></i
+              ></a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li>
+                  <div id="carrito">
+                    <table class="table" id="listaCarrito">
+                      <thead>
+                        <tr>
+                          <th scope="col">Imagen</th>
+                          <th scope="col">Nombre</th>
+                          <th scope="col">Precio</th>
+                        </tr>
+                      </thead>
+                      <tbody id="tbody"></tbody>
+                    </table>
+                    <div class="d-flex">
+                      <a
+                        href="#"
+                        class="btn btn-danger text-white m-2"
+                        id="vaciarCarrito"
+                        >Vaciar Carrito</a
+                      >
+                    </div>
+                  </div>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
       </div>
-      <div>
-        <ul id="carritoList" class="m-0 p-0">
-          <li class="nav-item dropdown fs-1">
-            <a class="nav-link " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false"><i class="fa-solid fa-cart-shopping fs-2 text-white"></i></a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li>
-                <div id="carrito">
-                  <table class="table" id="listaCarrito">
-                    <thead>
-                      <tr>
-                        <th scope="col">Imagen</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Precio</th>
-                      </tr>
-                    </thead>
-                    <tbody id="tbody">
-
-                    </tbody>
-                  </table>
-                  <div class="d-flex">
-                    <a href="#" class="btn btn-danger text-white" id="vaciarCarrito">Vaciar Carrito</a>
-                  </div>
-                </div>
-              </li>
-
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-  </header>
-  <main>
-    <!-- <section class="seccion1"></section> -->
-    <section class="productos">
-      <h2 class="text-center fs-1">Productos</h2>
-      <div class="cards">
-        <div class="row row-cols-2 row-cols-md-4 g-4 container cards" id="cards">
-
+    </header>
+    <main>
+      <div
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
         </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="imagenes/cortaantique-ga21d5da0c_1280.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="imagenes/sewing-kit-g5e19f3c38_1280.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="imagenes/sewing-g7918bcd82_1280corta.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <section class="productos">
+        <h2 class="text-center fs-1">Productos</h2>
+        <div class="cards">
+          <div
+            class="row row-cols-2 row-cols-md-4 g-4 container cards"
+            id="cards"
+          ></div>
         </div>
       </section>
 
@@ -100,98 +175,6 @@
         </div>
       </section>
     </main>
-    <footer class="text-center text-lg-start text-black">
-      <!-- Grid container -->
-      <div class="container p-4 pb-0">
-        <!-- Section: Links -->
-        <section class="">
-          <!--Grid row-->
-          <div class="row">
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Dolce Parma</h6>
-              <p>
-                Diseño independiente.
-                <br />
-                San Benito. Entre Ríos . Argentina
-              </p>
-            </div>
-            <!-- Grid column -->
-
-            <hr class="w-100 clearfix d-md-none" />
-
-            <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Productos</h6>
-              <p>
-                <a class="text-black">Portacosmeticos</a>
-              </p>
-              <p>
-                <a class="text-black">Cartucheras</a>
-              </p>
-              <p>
-                <a class="text-black">Porta termos</a>
-              </p>
-              <p>
-                <a class="text-black">Muchas cosas mas!</a>
-              </p>
-            </div>
-            <!-- Grid column -->
-
-            <hr class="w-100 clearfix d-md-none" />
-
-            <!-- Grid column -->
-            <hr class="w-100 clearfix d-md-none" />
-
-            <!-- Grid column -->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Contactanos</h6>
-              <p><i class="fas fa-home mr-3"></i> "Tu direccion"</p>
-              <p><i class="fas fa-envelope mr-3"></i> "tu email"</p>
-              <p><i class="fas fa-phone mr-3"></i> "telefonos"</p>
-              <p><i class="fas fa-print mr-3"></i> "telefonos"</p>
-            </div>
-            <!-- Grid column -->
-
-            <!-- Grid column -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
-
-              <!-- Facebook -->
-              <a
-                class="btn btn-floating m-1"
-                style="background-color: #3b5998"
-                href="#!"
-                role="button"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-
-              <!-- Instagram -->
-              <a
-                class="btn btn-floating m-1"
-                style="background-color: #ac2bac"
-                href="#!"
-                role="button"
-                ><i class="fab fa-instagram"></i
-              ></a>
-            </div>
-          </div>
-          <!--Grid row-->
-        </section>
-        <!-- Section: Links -->
-      </div>
-      <!-- Grid container -->
-
-      <!-- Copyright -->
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        © 2021 Copyright:
-        <a class="text-white" href="https://github.com/rodridega"
-          >Deganutti Rodrigo</a
-        >
-      </div>
-      <!-- Copyright -->
-    </footer>
-
     <div
       class="modal fade"
       id="exampleModal"
